[package]
name = "ivoryvalley"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }

# HTTP client for upstream requests
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client for upstream streaming
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = { version = "0.14", features = ["toml", "yaml"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
# Async test runtime
tokio-test = "0.4"

# Temporary directories for tests
tempfile = "3"

# HTTP testing utilities
axum-test = "17"

# Better test assertions
pretty_assertions = "1"
