[package]
name = "ivoryvalley"
version = "0.2.2"
edition = "2021"
description = "A transparent deduplication proxy for Mastodon and the Fediverse"
license = "MIT"
repository = "https://github.com/jensens/ivoryvalley"
homepage = "https://github.com/jensens/ivoryvalley"
readme = "README.md"
keywords = ["mastodon", "fediverse", "proxy", "deduplication", "activitypub"]
categories = ["command-line-utilities", "network-programming", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }

# HTTP client for upstream requests
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket client for upstream streaming
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Stream utilities for WebSocket handling
futures-util = "0.3"

# URL encoding for query parameters
urlencoding = "2"

# URL parsing for redirect rewriting
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = { version = "0.14", features = ["toml", "yaml"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
# Async test runtime
tokio-test = "0.4"

# Temporary directories for tests
tempfile = "3"

# HTTP testing utilities
axum-test = "17"

# Better test assertions
pretty_assertions = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "performance"
harness = false
